@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.34 2009/09/30 12:53:48 martin Exp $
+# $Id: CHANGES,v 1.993.2.35 2009/10/02 13:18:03 sb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.4.5 (2009/??/??)
+ - (2009/30/02) Fixed bug#4379 - Array parameters not working in mkStats.pl
  - (2009/09/30) Fixed bug#4348 - Dashboard: Upcoming Events Caching on a
     per-user basis.
  - (2009/09/30) Fixed bug#4338 - Enhancement: Be able to disable customer
